# unit-testing-python

./: .gitignore  README.md  pyproject.toml
src/onlineshop/: item.py  order.py
src/onlineshop/not_testable/: order_validator.py
src/onlineshop/testable/: iorder_validator.py  order_has_items_validator.py  order_id_validator.py  order_purchase_cost_validator.py  order_purchase_date_validator.py  order_validator_composite.py
tests/: conftest.py
tests/not_testable/: basic_order_validator_test.py  test_class_order_validator.py
tests/testable/: order_has_items_validator_test.py  order_id_validator_test.py  order_purchase_cost_validator_test.py  order_purchase_date_validator_test.py  order_validator_composite_test.py
