[tool.poetry]
name = "onlineshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "onlineshop", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configure pyright for working in VS Code
[tool.pyright]
typeCheckingMode = "strict"

